--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Sergey Maximov",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.1",
     "mongoose": "^4.11.1",
     "restify": "^5.0.0",
     "restify-cors-middleware": "^1.1.0"
