--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js",
-    "test": "exit 1"
+    "test": "node ./lib/**.tests.js"
   },
   "author": "Sergey Maximov",
   "license": "MIT",
