--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "nodemon": "^1.14.11"
   },
   "scripts": {
-    "start": "node index.js",
-    "start-dev": "nodemon index.js",
-    "test": "node ./lib/**.tests.js"
+    "start": "env $(cat .env | tr \"\\n\" \" \") node index.js",
+    "start-dev": "env $(cat .env | tr \"\\n\" \" \") nodemon index.js",
+    "test": "env $(cat .env | tr \"\\n\" \" \") node ./lib/**.tests.js"
   }
 }
