--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
   "dependencies": {
     "axios": "^0.17.1",
     "mongoose": "^4.11.1",
+    "natural": "^0.5.6",
     "restify": "^5.0.0",
     "restify-cors-middleware": "^1.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.14.11",
+    "prettier": "^1.12.0"
   },
   "scripts": {
     "start": "env $(cat .env | tr \"\\n\" \" \") node index.js",
-    "start-dev": "env $(cat .env | tr \"\\n\" \" \") nodemon index.js",
+    "start-dev": "env $(cat .env | tr \"\\n\" \" \") nodemon -i ./scripts index.js",
     "test": "env $(cat .env | tr \"\\n\" \" \") node ./lib/**.tests.js"
   }
 }
